--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "moment": "^2.29.4",
     "node-forge": ">=1.3.0",
+    "node-sass": "^7.0.0",
     "object-path": "^0.11.8",
     "postcss": "^8.4.14",
     "postcss-normalize": "^10.0.1",
@@ -21,7 +22,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.54.5",
+    "sass": "^1.69.5",
+    "sass-loader": "^7.0.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
